# prototype-ClinicApp

ClinicApp/: CMakeLists.txt  README.md  main.cpp
ClinicApp/core/manager/: clinicmanager.cpp  clinicmanager.h
ClinicApp/core/models/: appointment.cpp  appointment.h  doctor.cpp  doctor.h  patient.cpp  patient.h  user.cpp  user.h
ClinicApp/ui/: doctorwindow.cpp  doctorwindow.h  logindialog.cpp  logindialog.h  patientwindow.cpp  patientwindow.h
ClinicApp/utils/: stylesheet.cpp  stylesheet.h
